# webapp-template-hs

./: .travis.yml  README.md  build-all.sh  build.sh  ghc7.yaml  ghc8.yaml  stack.yaml  webapp-template.cabal
src/: Ether.hs  EtherCompat.hs  Handler.hs  Runner.hs  Runner.hs.in  Servant.hs
src/API/: Health.hs  Reader.hs  Types.hs
src/Data/: HSet.hs  Payload.hs
src/Handler/: Health.hs  Reader.hs
