name:                webapp-template
version:             0.1.0.0
synopsis:            Template for web application
homepage:            https://github.com/4e6/webapp-template-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Bushev
maintainer:          bushevdv@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Payload
                     , Ether
                     , EtherCompat
                     , Runner
                     , Servant
  build-depends:       base >= 4.7 && < 5
                     , hset == 2.2.0
                     , mtl == 2.2.1
                     , natural-transformation == 0.4
                     , tagged == 0.8.5
                     -- freeze indirect deps
                     , array               == 0.5.2.0
                     , deepseq             == 1.4.3.0
                     , pretty              == 1.1.3.3
                     , transformers        == 0.5.2.0
                     , transformers-compat == 0.5.1.4
                     , type-fun            == 0.1.1


  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -ddump-simpl-stats

source-repository head
  type:     git
  location: https://github.com/4e6/webapp-template-hs
